--- a/ledger_system/projects/templates/projects/index.html
+++ b/ledger_system/projects/templates/projects/index.html
@@ -242,7 +242,7 @@
 
 </div>
 
-  <img src="{% static 'images/logo.png' %}" alt="Company Logo">
+  <img src="{% static 'images/logo.PNG' %}" alt="Company Logo">
 
   <h1 id="title">
     Welcome to<br>The Elite Dream Builders<br>Billing System
