--- a/ledger_system/projects/templates/projects/billing.html
+++ b/ledger_system/projects/templates/projects/billing.html
@@ -1,3 +1,37 @@
+
+
+
+{% comment %} <script>
+    // Disable right click
+    document.addEventListener('contextmenu', event => event.preventDefault());
+  
+    // Disable specific key combinations
+    document.addEventListener('keydown', function (event) {
+      if (event.keyCode == 123) { // F12
+        event.preventDefault();
+      }
+      if (event.ctrlKey && event.shiftKey && (event.keyCode == 73 || event.keyCode == 74)) {
+        // Ctrl+Shift+I or Ctrl+Shift+J
+        event.preventDefault();
+      }
+      if (event.ctrlKey && event.keyCode == 85) {
+        // Ctrl+U
+        event.preventDefault();
+      }
+    });
+  </script>
+   {% endcomment %}
+   {% comment %} <script>
+    (function() {
+      const threshold = 160;
+      setInterval(function() {
+        if (window.outerWidth - window.innerWidth > threshold || window.outerHeight - window.innerHeight > threshold) {
+          document.body.innerHTML = "<h1 style='text-align:center;margin-top:20%;'>Inspecting is Disabled</h1>";
+        }
+      }, 1000);
+    })();
+  </script> {% endcomment %}
+  
 {% load static %}
 {% load extra_filters %}
 {% load humanize %}
@@ -168,16 +202,16 @@
     <tbody>
         {% for project in projects %}
         <tr>
-            <td>{{ forloop.counter }}</td>
+            <td style="text-align: center;">{{ forloop.counter }}</td>
             {% comment %} <td>{{ project.name }}</td> {% endcomment %}
-            <td>{{ project.client_name }}</td>
-            <td>
+            <td style="text-align: center;">{{ project.client_name }}</td>
+            <td style="text-align: center;">
                 <span class="status-dot {% if project.status == 'Not Started' %}not-started
                        {% elif project.status == 'In Progress' %}in-progress
                        {% elif project.status == 'Completed' %}completed
                        {% endif %}">
                 </span>
-                <span class="status-text">{{ project.status }}</span>
+                <span class="status-text" >{{ project.status }}</span>
                 <a href="{% url 'update_project_status' project.id %}" class="btn-status-update">Update Project Status</a>
             </td>
 
@@ -325,7 +359,7 @@
                 {% endif %}
             </td> {% endcomment %}
             <td  class="right-align">{{ project.remaining|indian_currency }}</td>
-            <td>
+            <td style="text-align: center;">
                 <a href="{% url 'download_invoice' project.id %}" class="btn-download-invoice">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" aria-hidden="true">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M4 16v2a2 2 0 002 2h12a2 2 0 002-2v-2M12 12v8m0 0l-4-4m4 4l4-4M12 4v8" />
