--- a/ledger_system/projects/templates/projects/daily.html
+++ b/ledger_system/projects/templates/projects/daily.html
@@ -394,7 +394,7 @@
 <body>
 
     <div class="header">
-        <img src="{% static 'images/logo.png' %}" alt="Logo" style="width: 100px; height: auto; margin-bottom: 20px;">
+        <img src="{% static 'images/logo.PNG' %}" alt="Logo" style="width: 100px; height: auto; margin-bottom: 20px;">
         <h1>Daily Expense Report > ></h1>
     </div>
 
