--- a/ledger_system/projects/templates/projects/billing.html
+++ b/ledger_system/projects/templates/projects/billing.html
@@ -158,7 +158,7 @@
     </div>
 <div class="header">
     
-    <img src="{% static 'images/logo.png' %}" alt="Logo" style="width: 100px; height: auto; margin-bottom: 20px;">
+    <img src="{% static 'images/logo.PNG' %}" alt="Logo" style="width: 100px; height: auto; margin-bottom: 20px;">
     <h1>Billing System > ></h1>
 </div>
 <nav class="nav-links">
