--- a/ledger_system/projects/templates/projects/daily_statistics.html
+++ b/ledger_system/projects/templates/projects/daily_statistics.html
@@ -128,6 +128,7 @@
             background-color: #007BFF!important;
             color: #ffffff;
             padding: 8px;
+            width: 200px;
             border-radius: 6px;
             transition: all 0.3s ease;
         }
@@ -173,6 +174,9 @@
 
     .container {
       padding: 20px 16px;
+    }
+    ul {
+        width: 100%;
     }
   }
 
@@ -354,4 +358,3 @@
 
 </body>
 </html>
-
