--- a/ledger_system/projects/templates/projects/billing.html
+++ b/ledger_system/projects/templates/projects/billing.html
@@ -1,37 +1,6 @@
 
-
-
-{% comment %} <script>
-    // Disable right click
-    document.addEventListener('contextmenu', event => event.preventDefault());
-  
-    // Disable specific key combinations
-    document.addEventListener('keydown', function (event) {
-      if (event.keyCode == 123) { // F12
-        event.preventDefault();
-      }
-      if (event.ctrlKey && event.shiftKey && (event.keyCode == 73 || event.keyCode == 74)) {
-        // Ctrl+Shift+I or Ctrl+Shift+J
-        event.preventDefault();
-      }
-      if (event.ctrlKey && event.keyCode == 85) {
-        // Ctrl+U
-        event.preventDefault();
-      }
-    });
-  </script>
-   {% endcomment %}
-   {% comment %} <script>
-    (function() {
-      const threshold = 160;
-      setInterval(function() {
-        if (window.outerWidth - window.innerWidth > threshold || window.outerHeight - window.innerHeight > threshold) {
-          document.body.innerHTML = "<h1 style='text-align:center;margin-top:20%;'>Inspecting is Disabled</h1>";
-        }
-      }, 1000);
-    })();
-  </script> {% endcomment %}
-
+{% extends 'projects/base.html' %}
+{% block title %}Billing System{% endblock %}
 {% load static %}
 {% load extra_filters %}
 {% load humanize %}
@@ -42,14 +11,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Billing System</title>
     <link rel="icon" href="{% static 'images/favicon-512x512.png' %}" type="image/png">
+    <title>Billing System</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/ledger.css' %}">
     <style>
         body {
             cursor: url("{% static 'images/cursor.png' %}") 16 16, auto;
+            margin: 0!important;
+            padding: 0!important;
         }
 
         .header {
@@ -136,7 +107,7 @@
     </style>
 </head>
 <body>
-
+{% block content %}
  <script>
         function checkOrientation() {
         const msg = document.getElementById('rotate-screen-message');
@@ -158,83 +129,16 @@
     </div>
 <div class="header">
     
-    <img src="{% static 'images/logo.PNG' %}" alt="Logo" style="width: 100px; height: auto; margin-bottom: 20px;">
-    <h1>Billing System > ></h1>
+   
+    
 </div>
-<nav class="nav-links">
-    <ul>
-        <a href="{% url 'daily_expense' %}"><li><span><svg version="1.1" id="icons"  class="arrow" xmlns="http://www.w3.org/2000/svg" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 128 128" xml:space="preserve"><style>.st0,.st1{display:none;fill:#191919}.st1,.st3{fill-rule:evenodd;clip-rule:evenodd}.st3,.st4{display:inline;fill:#191919}</style><g id="row1"><path id="nav:2_3_" d="M64 1 17.9 127 64 99.8l46.1 27.2L64 1zm0 20.4 32.6 89.2L64 91.3V21.4z" /></g></svg></span>Daily Expense</li></a>
-        <a href="{% url 'logout' %}"><li><span><svg version="1.1" id="icons"  class="arrow" xmlns="http://www.w3.org/2000/svg" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 128 128" xml:space="preserve"><style>.st0,.st1{display:none;fill:#191919}.st1,.st3{fill-rule:evenodd;clip-rule:evenodd}.st3,.st4{display:inline;fill:#191919}</style><g id="row1"><path id="nav:2_3_" d="M64 1 17.9 127 64 99.8l46.1 27.2L64 1zm0 20.4 32.6 89.2L64 91.3V21.4z" /></g></svg></span>Logout</li></a>
-    </ul>
-</nav>
+<!-- NAVBAR -->
+
+
 
 <!-- Add Expense Form -->
 
 
-<div style="margin-top: 10px;" class="add_form_div">
-
-    <div class="add-expense-form">
-    <h2>Add New Project</h2>
-    <form method="POST" action="{% url 'add_project' %}">
-        {% csrf_token %}
-        <input type="text" name="name" placeholder="Project Name" required>
-        <input type="text" name="client_name" placeholder="Client Name" required>
-        <input type="text" name="phone" placeholder="Client Phone Number" required>
-     
-        <button type="submit">Add Project</button>
-    </form>
-    
-    {% if error %}
-        <p style="color: red;">{{ error }}</p>
-    {% endif %}
-</div>
-    
-    <form method="post" action="{% url 'add_expense'  %}" class="add-expense-form">
-        {% csrf_token %}
-        <h2> Add  Budget</h2>
-        <label>Project:</label>
-        <select name="project" class="w-full p-2 rounded-md border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-400 bg-gray-50 text-gray-800">
-                <option value="">Select Client</option>
-                {% for project in projects %}
-                <option value="{{ project.id }}">{{ project.client_name }}</option>
-                {% endfor %}
-            </select>
-        <input type="date" name="date" required>
-        <input type="text" name="description" placeholder="Description" required>
-        <input type="number" name="area" placeholder="Area" required step="0.01">
-        <input type="number" name="rate" placeholder="Rate" required step="0.01">
-        <input type="number" name="cost" placeholder="Cost" required step="0.01">
-        <input type="text" name="note" placeholder="Note">
-        <button type="submit">Add Budget</button>
-    </form>
-
-    
-
-    
-    <form method="post" action="{% url 'add_payment' %}" class="add-expense-form">
-        {% csrf_token %}
-        <h2> Add Payments</h2>
-        <label>Project:</label>
-        <select name="project" required class="w-full p-2 rounded-md border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-400 bg-gray-50 text-gray-800">
-            <option value="">Select Client</option>
-            {% for project in projects %}
-            <option value="{{ project.id }}">{{ project.client_name }}</option>
-            {% endfor %}
-        </select>
-        <input type="number" name="amount" placeholder="Amount" required step="0.01">
-        
-        <select name="payment_mode" required class="w-full p-2 rounded-md border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-400 bg-gray-50 text-gray-800">
-            <option value="">Payment Mode</option>
-            <option value="Cash">Cash</option>
-            <option value="Bank Transfer">Bank Transfer</option>
-            <option value="Cheque">Cheque</option>
-            <!-- add more options if needed -->
-        </select>
-        <br>
-        <button type="submit">Add Payment</button>
-        
-    </form>
-</div>
 
 
 {% if messages %}
@@ -245,193 +149,58 @@
   </div>
 {% endif %}
 
-<table class="main-table">
-    <thead >
+<table class="table table-bordered table-striped align-middle text-center main-table">
+    <thead class="table-dark">
         <tr>
             <th style="width: 5%;">S.No</th>
-            {% comment %} <th>Project Name</th> {% endcomment %}
-            <th style="width: 10%;">Client Name</th>
-            <th style="width: 15%;">Status</th>
-            <th style="width: 60%;">Expenses</th> <!-- Your new expense section -->
-            <th style="width: 30%;">Payments</th>
-            <th style="width: 13%;">Remaining</th>
-            {% comment %} <th>Exceeded</th> {% endcomment %}
-            <th style="width: 13%;">Yet to Receive</th>
-            <th style="width: 15%;">Actions</th>
+            <th style="width: 10%;">Project ID</th>
+            <th style="width: 20%;">Client Name</th>
+            <th style="width: 20%;">Project Status</th>
+            <th style="width: 25%;">Total Budget</th>
+            <th style="width: 25%;">Total Paid</th>
+            <th style="width: 25%;">Yet to Receive</th>
         </tr>
     </thead>
     <tbody>
         {% for project in projects %}
         <tr>
-            <td style="text-align: center;">{{ forloop.counter }}</td>
-            {% comment %} <td>{{ project.name }}</td> {% endcomment %}
-            <td style="text-align: center;">{{ project.client_name }}</td>
-            <td style="text-align: center;">
+            <td>{{ forloop.counter }}</td>
+            <td>{{project.id}}</td>
+            <td><a href="{% url 'client_details' project.id %}" class="text-decoration-none text-dark fw-bold">
+                {{ project.client_name }}</a>
+            </td>
+            <td>
                 <span class="status-dot {% if project.status == 'Not Started' %}not-started
-                       {% elif project.status == 'In Progress' %}in-progress
-                       {% elif project.status == 'Completed' %}completed
-                       {% endif %}">
+                    {% elif project.status == 'In Progress' %}in-progress
+                    {% elif project.status == 'Completed' %}completed
+                    {% elif project.status == 'On Hold' %}on-hold
+                    {% endif %}">
                 </span>
-                <span class="status-text" >{{ project.status }}</span>
-                <a href="{% url 'update_project_status' project.id %}" class="btn-status-update">Update Project Status</a>
+                {{ project.status }}
+                <br>
+                <a href="{% url 'update_project_status' project.id %}" class="btn btn-sm btn-outline-secondary mt-1 btn-status-update">
+                    Update
+                </a>
             </td>
-
-            <!-- EXPENSES COLUMN -->
-            <td>
-                <!-- Expense List Table -->
-                <table  class="main-table" style="width: 100%; border-collapse: collapse; table-layout: fixed;">
-                    <thead>
-                        <tr style="border-bottom: 1px solid #ccc;">
-                            <th>Date</th>
-                            <th>Description</th>
-                            <th>Area</th>
-                            <th>Rate</th>
-                            <th>Amount</th>
-                            <th>Actions</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for expense in project.expenses_set.all %}
-                        <tr>
-                            <td>{{ expense.date }}</td>
-                            <td>{{ expense.description }}</td>
-                            <td class="right-align">{{ expense.area }}</td>
-                            <td  class="right-align">{{ expense.rate|indian_currency }}</td>
-                            <td  class="right-align">{{ expense.amount|indian_currency }}</td>
-                            <td>
-                                <form method="post" action="{% url 'remove_expense' expense.id %}" style="display:inline;">
-                                {% csrf_token %}
-                                <button type="submit" class="remove-btn" style="background-color: red;">Remove</button>
-                                </form>
-                            </td>
-                        </tr>
-                        {% empty %}
-                        <tr>
-                            <td colspan="6" style="text-align: center;">No expenses yet.</td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            
-                
-            
-                <!-- Budget Summary -->
-                <div style="margin-top: 10px;">
-                    {% comment %} <p><strong>Budget:</strong> ₹{{ project.budget }}</p> {% endcomment %}
-                    {% comment %} <p><strong>Budget:</strong> ₹{{ project.total_expenses }}</p> {% endcomment %}
-                    <p><strong>Total Budget:</strong> {{ project|total_budget_with_expense|indian_currency }}</p>
-                    
-                    <div class="notes">
-                        <strong>NOTES:</strong>
-                        <ol>
-                            {% for expense in  project.expenses_set.all %}
-                                {% if expense.note %}
-                                <li>
-                                    {{ expense.note }}
-                                    <form method="post" action="{% url 'remove_notes' expense.id %}" style="display:inline;">
-                                        {% csrf_token %}
-                                        <button type="submit" style="color:red; background:none; border:none; cursor:pointer;">🗑️</button>
-                                    </form>
-                                </li>
-                                {% endif %}
-                            {% endfor %}
-                        </ol>
-                        
-                    </div>
-                </div>
-            </td>
-
-            <!-- PAYMENTS COLUMN -->
-           
-            <td>
-                <!-- Payments List Table -->
-                <table style="width: 100%; border-collapse: collapse; font-size: 13px; margin-bottom: 10px;">
-                    <thead>
-                        <tr style="border-bottom: 1px solid #ccc;">
-                            <th>Payment Amount</th>
-                            <th>Payment Mode</th>
-                            <th>Actions</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for payment in project.payments.all %}
-                        <tr>
-                            <td  class="right-align">{{ payment.amount|indian_currency }}</td>
-                            <td>{{ payment.payment_mode }}</td>
-                            <td>
-                                <!-- Update Payment Form -->
-                                <form method="post" action="{% url 'edit_payment' payment.id %}" style="display:block;">
-                                    {% csrf_token %}
-                                    <button type="submit" style="background-color: blue; color: white;">Update</button>
-                                </form>
-                                <br>
-                                <!-- Delete Payment Form -->
-                                <form method="post" action="{% url 'delete_payment' payment.id %}" style="display:block;">
-                                    {% csrf_token %}
-                                    <button type="submit" class="remove-btn" style="background-color: red;">Delete</button>
-                                </form>
-                            </td>
-                        </tr>
-                        {% empty %}
-                        <tr>
-                            <td colspan="3" style="text-align: center;">No payments yet.</td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-
-                <!-- Add Payment Form -->
-                <div style="margin-top: 10px;">
-                    {% comment %} <form method="post" action="{% url 'add_payment' project.id %}" style="display:block;" class="add-expense-form">
-                        {% csrf_token %}
-                        <input type="number" name="amount" placeholder="Amount" step="0.01" required>
-                        <br>
-                       
-                        <select name="payment_mode" id="payment_mode" required>
-                            <option value="">-- Select Payment Mode --</option>
-                            <option value="cash">Cash</option>
-                            <option value="cheque">Cheque</option>
-                            <option value="online">Online</option>
-                        </select>
-                        <button type="submit" class="add-expense-form" style="display:block;">Add Payment</button>
-                    </form> {% endcomment %}
-                </div>
-
-                <!-- Total Paid and Remaining -->
-                <div style="margin-top: 10px;">
-                    <strong class="right-align">Total Paid: {{ project.payments.all|total_payment|indian_currency }}</strong><br>
-                    {% if project.remaining > 0 %}
-                    <strong class="right-align">Remaining: {{ project.remaining|indian_currency }}</strong>
-                    {% endif %}
-                    {% if project.remaining < 0 %}
-                        <strong style="color: red;"  class="right-align">Exceeded: {{ project.remaining|indian_currency }}</strong>
-                    {% endif %}
-                </div>
-            </td>
-
-
-            <!-- Remaining, Exceeded, Total Cost, Actions -->
-            <td  class="right-align">{{ project.remaining|indian_currency }}</td>
-            {% comment %} <td>
-                {% if project.estimated_cost > project.budget %}
-                    <span style="color: red;">₹{{ project.estimated_cost|sub:project.budget|floatformat:2|intcomma }}</span>
+            <td class="right-align">{{ project|total_budget_with_expense|indian_currency }}</td>
+            <td class="right-align">
+                {% if project.payments.all %}
+                    {{ project.payments.all|total_payment|indian_currency }}
                 {% else %}
                     ₹0
                 {% endif %}
-            </td> {% endcomment %}
-            <td  class="right-align">{{ project.remaining|indian_currency }}</td>
-            <td style="text-align: center;">
-                <a href="{% url 'download_invoice' project.id %}" class="btn-download-invoice">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" aria-hidden="true">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M4 16v2a2 2 0 002 2h12a2 2 0 002-2v-2M12 12v8m0 0l-4-4m4 4l4-4M12 4v8" />
-                    </svg>
-                    Download Invoice
-                </a>
+            <td class="right-align">
+                {% if project.remaining < 0 %}
+                    <span class="text-danger">{{ project.remaining|indian_currency }}</span>
+                {% else %}
+                    {{ project.remaining|indian_currency }}
+                {% endif %}
             </td>
         </tr>
         {% endfor %}
     </tbody>
 </table>
+{% endblock %}
 
    
 
